--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "jspdf": "^3.0.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
